--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
             <img src="https://images.ole.com.ar/2022/04/11/qOxtSsA9__720x0__1.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQW70jjxj4Q3USxfUoSi7ryj13exuFojo06lA&usqp=CAU" class="d-block w-100" alt="...">
+            <img src="https://assets.goal.com/v3/assets/bltcc7a7ffd2fbf71f5/blta4a12b519ff46e25/615f276e07aaed59472e26ef/3e6193a0db5f6370d10ba8377aeae35b9062c04a.jpg?auto=webp&format=jpg&quality=100" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="https://i.ytimg.com/vi/AUru87FSZsI/mqdefault.jpg" class="d-block w-100" alt="...">
+            <img src="https://yt3.ggpht.com/hDlOuVaErs2F-qrNs8AcO1LfvgxAIm23kc0dSTiujB_3dZQOCaqdV31qY0hZWi2kjOL81W-t=s900-c-k-c0x00ffffff-no-rj" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
